--- a/FastFoodApp/Base.lproj/LaunchScreen.storyboard
+++ b/FastFoodApp/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -11,10 +13,42 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pots" translatesAutoresizingMaskIntoConstraints="NO" id="m9G-a4-Vgz">
+                                <rect key="frame" x="6" y="44" width="228" height="225"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="225" id="6ge-zf-CU7"/>
+                                    <constraint firstAttribute="width" constant="228" id="dCN-rC-vYe"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fastFoodLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Upm-ub-Dl1">
+                                <rect key="frame" x="127" y="355.5" width="160" height="185"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="160" id="APX-co-mb0"/>
+                                    <constraint firstAttribute="height" constant="185" id="Gqv-BP-WbR"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Chef" translatesAutoresizingMaskIntoConstraints="NO" id="cuu-42-YyS">
+                                <rect key="frame" x="0.0" y="575" width="414" height="287"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="287" id="4yL-oL-fm7"/>
+                                    <constraint firstAttribute="width" constant="471" id="ZUz-O3-SAX"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Upm-ub-Dl1" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="3Mz-m3-wFP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="cuu-42-YyS" secondAttribute="bottom" id="AVn-FA-PXt"/>
+                            <constraint firstItem="cuu-42-YyS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="IKC-QC-lSQ"/>
+                            <constraint firstItem="m9G-a4-Vgz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Tjc-2S-LRW"/>
+                            <constraint firstItem="Upm-ub-Dl1" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="aDa-U9-OqC"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cuu-42-YyS" secondAttribute="trailing" id="dOl-hf-BYh"/>
+                            <constraint firstItem="m9G-a4-Vgz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="6" id="jFC-u6-NwS"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -22,4 +56,12 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Chef" width="414" height="288"/>
+        <image name="fastFoodLogo" width="160" height="186"/>
+        <image name="pots" width="229" height="226"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
